# video-supply-predict

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: logging.yaml  model_params.yaml  risk_thresholds.yaml
dags/: daily_baseline_refresh.py  hourly_engagement_pipeline.py  weekly_model_retraining.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: mart_alert_queue.sql  mart_scored_videos.sql  mart_sku_risk.sql  mart_trending_videos.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_engagement_events.sql  stg_sku_catalog.sql
docker/: airflow.Dockerfile  app.Dockerfile  docker-compose.yml  mlflow.Dockerfile
docs/decisions/: 001-quantile-regression.md  002-duckdb-over-postgres.md  003-human-in-the-loop-design.md
scripts/: check_packages.ps1  create_skeleton.ps1  git_commit_phase2.ps1  init_db.sh  install_deps.ps1  promote_model.py  run_hourly_ingestion.py  run_seed.ps1  run_tests.ps1  seed_historical_data.py
src/: config.py
src/agents/: __init__.py  action.py  graph.py  investigation.py  state.py  triage.py
src/api/: main.py
src/api/routers/: alerts.py  health.py  scores.py  skus.py  videos.py
src/dashboard/: api_client.py  app.py
src/dashboard/panels/: alert_queue.py  sku_heatmap.py  system_health.py  trending_feed.py
src/features/: velocity.py
src/ingestion/: loader.py  schemas.py
src/ingestion/generators/: sku_generator.py  video_generator.py
src/models/: evaluate.py  registry.py  score.py  train.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_pipeline_end_to_end.py
tests/unit/: test_agents.py  test_config.py  test_dags.py  test_generators.py  test_risk_calculator.py  test_schemas.py  test_scoring.py
