[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serene-hypatia"
version = "0.1.0"
description = "Short video → product demand signal: viral engagement to inventory replenishment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  # --- Data / Pipeline ---
  "duckdb>=0.10.0",
  "dbt-duckdb>=1.7.0",
  "apache-airflow>=2.9.0",
  "apache-airflow-providers-http>=4.10.0",

  # --- ML ---
  "lightgbm>=4.3.0",
  "scikit-learn>=1.4.0",
  "mlflow>=2.12.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=15.0.0",

  # --- Agentic ---
  "langgraph>=0.1.0",
  "langchain-groq>=0.1.0",
  "langchain-core>=0.2.0",

  # --- API ---
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",

  # --- Dashboard ---
  "streamlit>=1.35.0",
  "streamlit-autorefresh>=0.0.1",
  "plotly>=5.22.0",

  # --- Config / Validation ---
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",

  # --- Utilities ---
  "structlog>=24.1.0",
  "tenacity>=8.3.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "faker>=25.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dags"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
]
ignore = ["B008", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
markers = [
  "unit: fast, isolated unit tests",
  "integration: tests that touch Docker services (DuckDB, API)",
  "slow: tests that take >5 seconds",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["lightgbm.*", "mlflow.*", "airflow.*", "duckdb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
]
